--- a/devetry/src/App.scss
+++ b/devetry/src/App.scss
@@ -44,3 +44,24 @@ h3.loading {
     margin-bottom: 1em;
     margin-top: 1em;
 }
+
+.button{
+    margin-left: 1em;
+}
+
+.Header{
+    margin-bottom: 1em;
+    width: 100%;
+    padding: 1em;
+    background-color: #a9a9a9;
+}
+
+.Home{
+    font-size: 2em;
+    font-weight: bold;
+}
+
+.search{
+    position: absolute;
+    right: 1em;
+}
