sam's final commits

--- a/devetry/src/App.scss
+++ b/devetry/src/App.scss
@@ -50,3 +50,11 @@ h3.loading {
     color: #ffffff; 
 }
 
+.checkbox {
+    margin: 5px;
+}
+
+h3{
+    font-size: larger;
+    font-weight: bold;
+}
